2014-01-12  Janus Weil  <janus@gcc.gnu.org>

PR fortran/58026
	* decl.c (gfc_match_data_decl): Improve error recovery.


2014-01-12  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/58026
	* gfortran.dg/alloc_comp_basics_6.f90: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@206564 138bc75d-0d04-0410-961f-82ee72b054a4